static/css/apps/tag.less
/* --------------------------------------------------
    tag styles
---------------------------------------------------*/

.tl {
    padding: 5px;
}
.tli {
    .inline-block();

    padding: 5px;

    > a {
        .border-radius(@border-radius);

        background-color: #fff;
        border: 1px solid #ddd;
        display: block;
        padding: 12px;

        &:hover {
            background-color: #eee;
        }
    }
}

@media screen and (max-width: 599px) {
    .tli { width: 100/1%; }
}
@media screen and (min-width: 600px) and (max-width: 1099px) {
    .tli { width: 100/2%; }
}
@media screen and (min-width: 1100px) and (max-width: 1399px) {
    .tli { width: 100/3%; }
}
@media screen and (min-width: 1400px) and (max-width: 1699px) {
    .tli { width: 100/4%; }
}
@media screen and (min-width: 1700px) and (max-width: 1999px) {
    .tli { width: 100/5%; }
}
@media screen and (min-width: 2000px) and (max-width: 2299px) {
    .tli { width: 100/6%; }
}
@media screen and (min-width: 2300px) and (max-width: 2599px) {
    .tli { width: 100/7%; }
}
@media screen and (min-width: 2600px) {
    .tli { width: 100/8%; }
}

.tl-alias-list {
    list-style-type: none;
    margin-bottom: 0;
    > li {
        overflow: hidden;
        white-space: nowrap;
    }
}
.tlg-alias-list {
    padding: 10px;
}

#tl-quick-filter { width: 300px; }
@media screen and (max-width: @screen-xs1) {
    #tl-quick-filter { width: 100%; }
}

/* --------------------------------------------------
    tag info block
---------------------------------------------------*/

.tag-info-block {
    background-color: @nav-bg;
    border-top: @nav-border-alt;
    border-bottom: @nav-border;
    overflow: auto;
    padding: 10px;
}
.tag-info-heading {
    font-size: 24px;
    font-weight: @font-weight-base;
    margin-bottom: 0;
}
.tag-info-alias-list {
    margin-bottom: 10px;
}

